# indiestudio

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  Makefileindie  OgreUI.cpp  OgreUI.h  TutorialApplication.cpp  TutorialApplication.h  animation list.txt  cpp_indie_studio  evaluateWork.sh  gauntlet  gen_doc.sh  lol  penis  resources.cfg  stat  trace
CMake/: FindOGRE.cmake  FindOIS.cmake  FindOgreOggSound.cmake  FindPkgMacros.cmake  OgreConfigTargets.cmake
include/: OgreUI.hh  PlayerController.hh  Stats.hh
include/core/: ActionLists.hh  Conf.hh  ConfMenu.hh  ConnectMenu.hh  Control.hh  Core.hh  CoreUIObserver.hh  Hud.hh  IUIObserver.hh  Lobby.hh  MainMenu.hh  Menu.hh  MenuButton.hh  MenuItem.hh  PlayerController.hh  Position.hh  SaveloadMenu.hh  Stopwatch.hh  TextBox.hh
include/core/listeners/: ListenerAddEntity.hh  ListenerAddParticle.hh  ListenerAnimation.hh  ListenerConnect.hh  ListenerDeleteEntity.hh  ListenerDeleteParticle.hh  ListenerDisconnect.hh  ListenerHUD.hh  ListenerHandshake.hh  ListenerMap.hh  ListenerMoveEntity.hh  ListenerPlaySound.hh  ListenerSelectPlayer.hh  ListenerStartGame.hh  ListenerStopSound.hh
include/core/menu/: CharMenu.hh  ConfMenu.hh  ConnectMenu.hh  Credits.hh  IpMenu.hh  KeyMenu.hh  LoadMenu.hh  Lobby.hh  MainMenu.hh  Menu.hh  MessageBox.hh  SaveMenu.hh  SaveloadMenu.hh  TextBox.hh  WaitPacket.hh
include/gameData/: ABody.hh  ASpell.hh  Actor.hh  ActorFactory.hh  ActorPreset.hh  BackgroundName.hh  BodyFactory.hh  CharacterMenuName.hh  ContainerObject.hh  Creature.hh  CreatureFactory.hh  CreaturePreset.hh  EntityName.hh  FactoryData.hh  GameObject.hh  GameObjectFactory.hh  GameObjectPreset.hh  Item.hh  ItemContainer.hh  LootTable.hh  Player.hh  PlayerFactory.hh  PlayerPreset.hh  SoundName.hh  Spawner.hh  Spell.hh  SpellContainer.hh  Stats.hh  TextureName.hh
include/gameData/Spell/: ASpell.hh  AreaType.hh  DistAttack.hh  HealAttack.hh  MeleeAttack.hh  Spell.hh  SpellFactory.hh  TeleportSpell.hh
include/graph/: Animations.hh  AnimationsList.hh  Effect.hh  EffectName.hh  HeightMap.hh  Ogre.hh  OgreUI.hh
include/helpers/: Files.hh  ISafeQueue.hpp  Rand.hh  SafeQueue.hpp  ScopedLock.hpp  StackTrace.h  Stopwatch.hh  Thread.hpp
include/helpers/JSON/: IJson.hpp  JsonArr.hpp  JsonObj.hpp  JsonStr.hpp  (+1 more)
include/network/: ISocketDisconnectionListener.hh  PacketFactory.hh  PacketFactorySocketDisconnectionListener.hh  Socket.hh
include/world/: AbstractAI.hh  BasicAI.hh  BasicIA.hh  Clock.cpp  Collider.hh  DistAI.hh  EntityCollideLayer.hh  GameServer.hh  Math.hh  MusicHandler.hh  PhysicCollideLayer.hh  PlayerChars.hh  SpawnerAI.hh  World.hh
includes/: NSocket.hpp  SocketException.hpp  World.hh
includes/core/: Core.hh
maps/: tutorial.map
media/Compositors/: BlendScreen.material
media/models/: Book.mesh  Castle_wall.mesh  Chest2B.mesh  ChestCartoon_obj.mesh  Rock.mesh  Troll_2_H_FBX.mesh  Troll_2_H_FBX.skeleton  archer.mesh  archer.skeleton  berserker.mesh  berserker.skeleton  berserkerhigh.mesh  berserkerhigh_animationsplit_ms3d.skeleton  character.material  door.mesh  draugr  girl_warrior.mesh  girl_warrior.skeleton  mapTest.mesh  plan.mesh  skeleton_archer.mesh  skeleton_archer.skeleton  skeleton_footman.mesh  skeleton_footman.skeleton  skeleton_sorcerer.mesh  skeleton_sorcerer.skeleton  skeleton_warlord.mesh  skeleton_warlord.skeleton  troll.mesh  troll.skeleton  unityexportmap_obj.mesh  wagen.mesh  wallRock.mesh  warlock.mesh  water_well.mesh  wood_door.mesh  wood_door.skeleton
media/sounds/: Music - dramatic combat
ogre3d/: install_ogre.sh
shell/: Skeleton_Sorcerer  Skeleton_Warlord  Skeleton_footman  Skeleton_footman.json  berseker.json  berseker.txt  berseker_convert_json.sh  convert.sh  json_to_enum.sh  rtf_to_json.sh  skeleton_archier.json  skeleton_archier.txt  skeleton_sorcerer.json  toMap.sh
src/: OgreUI.cpp  PlayerController.hh  main.cpp
src/core/: ActionLists.cpp  CharMenu.cpp  Conf.cpp  ConfMenu.cpp  ConnectMenu.cpp  Control.cpp  Core.cpp  CoreUIObserver.cpp  Hud.cpp  IUIObserver.cpp  Lobby.cpp  MainMenu.cpp  Menu.cpp  MenuButton.cpp  PlayerController.cpp  SaveloadMenu.cpp  Stopwatch.cpp  TextBox.cpp
src/gameData/: ABody.cpp  ASpell.cpp  Actor.cpp  ActorFactory.cpp  ActorPreset.cpp  BodyFactory.cpp  ContainerObject.cpp  Creature.cpp  CreatureFactory.cpp  CreaturePreset.cpp  GameObject.cpp  GameObjectFactory.cpp  GameObjectPreset.cpp  Item.cpp  ItemContainer.cpp  LootTable.cpp  Player.cpp  PlayerFactory.cpp  PlayerPreset.cpp  Spawner.cpp  Spell.cpp  SpellContainer.cpp  Stats.cpp
src/graph/: Animations.cpp  AnimationsList.cpp  Effect.cpp  HeightMap.cpp  Ogre.cpp  OgreDefinitions.cpp  OgreUI.cpp
src/helpers/: Files.cpp  Rand.cpp  ScopedLock.cpp  StackTrace.cpp  Stopwatch.cpp
src/network/: PacketFactory.cpp  PacketFactorySocketDisconnectionListener.cpp  Socket.cpp
src/world/: AbstractAI.cpp  BasicAI.cpp  BasicIA.cpp  Collider.cpp  DistAI.cpp  EntityCollideLayer.cpp  GameServer.cpp  Math.cpp  MusicHandler.cpp  PhysicCollideLayer.cpp  SpawnerAI.cpp  SpawnerAI.hh  World.cpp
srcs/: NSocket.cpp  SocketException.cpp  World.cpp
srcs/core/: Core.cpp
srcs/graph/: Ogre.cpp
stats/: activity.html  authors.html  commits_by_author.plot  files.html  gitstats.cache  index.html  lines.html  lines_of_code_by_author.plot  tags.html
tests/: CMakeLists.txt  CTestTestfile.cmake  PacketAddPlayerTest  PacketConnectTest  PacketDisconnectTest  PacketHandshakeTest  PacketMapTest  PacketSelectPlayerTest
tests/PhysicTest/: PhysicCollierLayerTest.cpp
tests/Testing/Temporary/: CTestCostData.txt
tests/packet/: PacketAddEntityTest.cpp  PacketAddParticleTest.cpp  PacketAddPlayerTest.cpp  PacketAnimationTest.cpp  PacketConnectTest.cpp  PacketControlTest.cpp  PacketDeleteEntityTest.cpp  PacketDeleteParticleTest.cpp  PacketDisconnectTest.cpp  PacketFactoryTest.cpp  PacketHUDTest.cpp  PacketHandshakeTest.cpp  PacketMapTest.cpp  PacketMoveEntityTest.cpp  PacketPlaySoundTest.cpp  PacketSelectPlayerTest.cpp  PacketStartGameTest.cpp  PacketStopSoundTest.cpp  SocketTest.cpp
unittests/: main.cpp  pointInFront.cpp
(+173 files in other folders)
